[package]
authors = ["bunnegirl"]
edition = "2018"
readme = "README.md"
name = "vumeter"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rtic = "0.6.0-rc.4"
fugit = "0.3"

[dependencies.rtt-target]
version = "0.3"
features = ["cortex-m"]

[dependencies.stm32f4]
version = "0.14"
features = ["stm32f411", "rt"]

[dependencies.stm32f4xx-hal]
version = "0.10"
features = ["stm32f411", "rt"]

[[bin]]
name = "vumeter"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
