[package]
authors = ["bunnegirl"]
edition = "2018"
readme = "README.md"
name = "audioctrl"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rtic = "0.6.0-rc.4"
fugit = "0.3"
heapless = "0.7"
paste = "1.0"

[dependencies.rtt-target]
version = "0.3"
features = ["cortex-m"]

[dependencies.stm32h7xx-hal]
version = "0.10"
features = ["stm32h743v", "rt"]

[[bin]]
name = "audioctrl"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
