[package]
name = "rgb"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-rtic = "1"
derivative = { version = "2.2", features = [ "use_core" ] }
fugit = "0.3"
heapless = "0.7"
panic-halt = "0.2"

[dependencies.rtt-target]
version = "0.3"
features = [ "cortex-m" ]

[dependencies.stm32f4xx-hal]
version = "0.11"
features = [ "rt", "stm32f411" ]

[[bin]]
name = "rgb"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
lto = true
