[package]
authors = ["bunnegirl"]
edition = "2018"
readme = "README.md"
name = "stm32h7"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rtic = "1"
fugit = "0.3"
heapless = "0.7"

[dependencies.audioctrl]
path = "../.."

[dependencies.rtt-target]
version = "0.3"
features = ["cortex-m"]

[dependencies.stm32h7xx-hal]
version = "0.10"
features = ["stm32h743v", "rt"]

[profile.dev]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false